--- a/quiz-app/src/App.css
+++ b/quiz-app/src/App.css
@@ -5,3 +5,14 @@
   flex-direction: column;
   text-align: center;
 }
+
+.menu, .quiz{
+  width: 500px;
+  height: 500px;
+  background-color: lightblue ;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
