--- a/quiz-app/src/App.css
+++ b/quiz-app/src/App.css
@@ -22,7 +22,7 @@ button:active{
   color: #fff;
 }
 
-.menu button, .quiz button{
+.menu button, .quiz button , .score button{
   width: 300px;
   height: 50px;
   margin: 5px;
